Major update - fixed headers and footers; need more content though

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a class="active" href="index.html">About Me</a></li>
           <li><a href="pages/research.html">Research</a>
             <ul>
+              <li><a href="pages/research.html#malaria">Malaria and Simulations for Health Policy</a></li>
               <li><a href="pages/research.html#dynamics">Dynamical Processes on Networks</a></li>
               <li><a href="pages/research.html#structure">Structural Analysis of Networks</a></li>
             </ul>
@@ -99,11 +100,11 @@ Licence URI: http://www.os-templates.com/template-terms
         <h2>Current Projects</h2>
         <p>
           <ul>
-            <li><b>Bioko Island Malaria Elimination Program</b></li>
+            <li><b>Human Travel Patterns and Imported Malaria Cases</b></li>
 
             <li><b>Characterizing Spatial Uncertainty for Policy</b></li>
 
-            <li><b>Human Travel Patterns</b></li>
+            <li><b>Modeling with Human Travel Data</b></li>
 
           </ul>
         </p>
@@ -134,7 +135,7 @@ Licence URI: http://www.os-templates.com/template-terms
             and the <a href="http://wokinfo.com">Web of Science</a> -- according
             to their scientific subject matter. I then analyzed how the structure
             of the co-authorship networks corresponding to each scientific sub-community
-            evolved over time. See our published article <a href="https://arxiv.org/abs/1801.04898">here</a>.
+            evolved over time. See our published article <a href="https://arxiv.org/abs/1801.04898"><b>here</b></a>.
             This project started as part of a collaboration during the 2015
             Complex Systems Summer School at the <a href="https://www.santafe.edu">Santa Fe Institute</a>.
             <li><b>Measuring Plagiarism on arXiv</b></li>
@@ -147,7 +148,7 @@ Licence URI: http://www.os-templates.com/template-terms
             a minority of offending authors, and that there was a negative correlation
             between the reused text contained in a paper and the number of citations
             it received.
-            See our published article <a href="https://arxiv.org/abs/1412.2716">here</a>.
+            See our published article <a href="https://arxiv.org/abs/1412.2716"><b>here</b></a>.
           </ul>
         </p>
 <!--        <p> My committee chair at Cornell is <a href="http://cbsu.tc.cornell.edu/staff/myers/">
@@ -184,6 +185,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <hr>
         <h1>Current CV</h1>
         <p class="readmore">View my current CV <a href = "pages/DTCitron_CV.pdf"><b>here &raquo;</b></a></p>
+        <p class="readmore">LinkedIn profile <a href="https://www.linkedin.com/in/daniel-citron-9339449/"><b>here &raquo;</b></a></p>
 <!--
 		<p class="readmore"><a href = "http://linkedin.com/pub/daniel-citron">  LinkedIn profile <b> here &raquo; </b></a> </p>
 -->
