--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 <script>
@@ -18,7 +18,7 @@ Licence URI: http://www.os-templates.com/template-terms
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
@@ -36,6 +36,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="../index.html">About Me</a></li>
         <li><a href="research.html">Research</a>
           <ul>
+            <li><a href="research.html#malaria">Malaria and Simulations for Health Policy</a></li>
             <li><a href="research.html#dynamics">Dynamical Processes on Networks</a></li>
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
@@ -53,41 +54,41 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper col4">
   <div id="container">
     <div id ="content">
-      <h1>Preparing for the Physics GRE</h1>      
-      <p> If you're an undergraduate and are interested in applying to graduate programs 
-      in the field of physics, you'll have to take the 
-      <a href = "http://www.ets.org/gre/subject/about/content/physics" target="_blank">  <b>Physics GRE 
+      <h1>Preparing for the Physics GRE</h1>
+      <p> If you're an undergraduate and are interested in applying to graduate programs
+      in the field of physics, you'll have to take the
+      <a href = "http://www.ets.org/gre/subject/about/content/physics" target="_blank">  <b>Physics GRE
       Subject Test </b> </a>.  This test is intended to survey your familiarity with
       undergraduate physics topics.  It does not measure your potential as a scientist
 	  (nor does it gauge your worth as a human being).  There is absolutely no reason to
 	  take this test unless you intend on pursuing an advanced degree in physics, but you
 	  might as well take some time to prepare and get the best score that you can. </p>
 	  <p>
-	  
+
 	  <p> I compiled and organized the following materials as part of a short course on
 	  preparing for the Physics GRE.  Please feel free to use them to prepare for the test.
 	  Reading them will not give you a deep understanding of the complexities of modern
 	  physics, but they should give you a reasonable sense of the scope of material the test
 	  requires, as well as the types of questions asked.</p>
-	  
+
 	  <hr>
 	  <h2>How to Study</h2>
 	  <p> The Physics GRE is very, very different from any other test that you have taken
 	  as an undergrad.  It is so different that really the only way to prepare is to take
-	  some practice tests - a few of these are available online, and 
-	  <a href="http://www.ets.org/s/gre/pdf/practice_book_physics.pdf" target="_blank"> 
-	  one is available directly through ETS</a>.  Sit down and take one <i> in real time 
-	  </i> - no notes, no breaks.  Additionally, try looking through my 
-	  <a href = "../GRE_prep_slides/no_excuses.pdf" target="_blank"><b>No Excuses Checklist</b></a> - these are concepts 
-	  that you have no excuse to not be familiar with when you sit down to take the 
-	  Physics GRE. Afterwards, reflect on how well you did - which types of 
+	  some practice tests - a few of these are available online, and
+	  <a href="http://www.ets.org/s/gre/pdf/practice_book_physics.pdf" target="_blank">
+	  one is available directly through ETS</a>.  Sit down and take one <i> in real time
+	  </i> - no notes, no breaks.  Additionally, try looking through my
+	  <a href = "../GRE_prep_slides/no_excuses.pdf" target="_blank"><b>No Excuses Checklist</b></a> - these are concepts
+	  that you have no excuse to not be familiar with when you sit down to take the
+	  Physics GRE. Afterwards, reflect on how well you did - which types of
 	  questions did you answer correctly, and which types incorrectly? </p>
-	  
+
 	  <p> From this point on, you can review the topics that you don't feel familiar with.
 	  Your undergraduate textbooks should be fine, my notes (below) may also be helpful.
 	  Above all, practice solving as many real test problems as you can find - my notes
 	  will include example problems as well as discussions about how to solve them. </p>
-	  
+
 	  <hr>
 	  <h2>Review Notes</h2>
 	  <p>
@@ -117,21 +118,21 @@ Licence URI: http://www.os-templates.com/template-terms
 		  <li> <a href = "../GRE_prep_slides/nuclear.pdf" target="_blank"><b>
 		    Nuclear Physics</b></a></li>
 		  <li> <a href = "../GRE_prep_slides/example_problems.pdf" target="_blank"><b>
-		    Example Problems</b></a>- These example problems may appear difficult or 
-		    unfamiliar, but with a little physics intuition and a few tricks we can solve 
+		    Example Problems</b></a>- These example problems may appear difficult or
+		    unfamiliar, but with a little physics intuition and a few tricks we can solve
 		    them easily!</li>
 	    </ul>
 	  </p>
 
 	  <hr>
 	  <h2>Additional Resources</h2>
-	  <p> <a href = "http://www.ets.org/gre/subject/about/content/physics" target="_blank"> <b> 
-	  The official ETS website</b> </a> contains a lot of basic information about the 
+	  <p> <a href = "http://www.ets.org/gre/subject/about/content/physics" target="_blank"> <b>
+	  The official ETS website</b> </a> contains a lot of basic information about the
 	  material covered on the Physics GRE as well as the format of the test.</p>
 	  <p>The <a href = "http://www.physics.ohio-state.edu/undergrad/ugs_gre.php" target="_blank">
 	  <b>Ohio State SPS website</b></a> currently has four past example exams that you can
 	  practice with, as well as worked solutions to problems sorted by subject area.
-	  Another site with worked solutions to the four past example exams is 
+	  Another site with worked solutions to the four past example exams is
 	  <a href = "http://grephysics.net/ans/" target="_blank"><b>GREPhysics.net</b></a>
 	  (but unfortunately has a few bugs and has not been updated since 2007).</p>
 	  <p> Four practice exams is a lot, but if you want <i>even more</i> practice,
@@ -139,15 +140,15 @@ Licence URI: http://www.os-templates.com/template-terms
 	  </b></a> has some additional practice tests and review questions.</p>
 	  <hr>
 	  <h2><b>Best of luck with the exam!</b></h2>
-	  
-    </div>    
+
+    </div>
 <!-- ### Here's a column
     <div id="column">
       <div class = "holder">
         <div class = "imgholder"><img src = "../images/LiN2.jpeg" alt="" />
       </div>
       <div id="featured">
-        <p> Helping fifth graders and kindergarteners make liquid nitrogen ice cream, as 
+        <p> Helping fifth graders and kindergarteners make liquid nitrogen ice cream, as
         part of Cornell Center for Materials Research outreach.</p>
       </div>
     </div>
@@ -155,9 +156,9 @@ Licence URI: http://www.os-templates.com/template-terms
  -->
     <div id ="content">
       <h1> </h1>
-      Did you find these materials useful?  
+      Did you find these materials useful?
       <p>
-        <b> 
+        <b>
           <script language="JavaScript">
           var username = "dtc65";
           var hostname = "cornell.edu";
@@ -186,15 +187,18 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
