--- a/pages/other.html
+++ b/pages/other.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 <script>
@@ -16,7 +16,7 @@ Licence URI: http://www.os-templates.com/template-terms
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
@@ -35,6 +35,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="../index.html">About Me</a></li>
         <li><a href="research.html">Research</a>
           <ul>
+            <li><a href="research.html#malaria">Malaria and Simulations for Health Policy</a></li>
             <li><a href="research.html#dynamics">Dynamical Processes on Networks</a></li>
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
@@ -55,44 +56,42 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="container">
     <div id="content">
 	  <h1 id="sideprojects">Data Projects</h1>
-	  <a><h2>Do Movie Ratings Matter?</h2></a>
-	  <a><h2>Price Distributions of Trading Cards</h2></a>
 	  <a><h2>Re-evaluating the Points Values of Scrabble Tiles</h2></a>
 	  <hr>
 	</div>
     <div id="content">
-      <h1>Notable Eclectic Ephemera<</h1>
+      <h1>Notable Eclectic Ephemera</h1>
       <a><h2>Axolotls</h2></a>
-      <p>The axolotl (<i>Ambystoma mexicana</i>) is a neotenic salamander perhaps best 
-      known for its distinctive mane of feathery external gills.  "Neoteny" refers to a 
-      lifecycle in which an animal undergoes a complete reproductive cycle without ever 
-      reaching an adult state - most axolotls live their entire lives as fully aquatic 
+      <p>The axolotl (<i>Ambystoma mexicana</i>) is a neotenic salamander perhaps best
+      known for its distinctive mane of feathery external gills.  "Neoteny" refers to a
+      lifecycle in which an animal undergoes a complete reproductive cycle without ever
+      reaching an adult state - most axolotls live their entire lives as fully aquatic
       tadpoles. </p>
-      <p> Axolotls make wonderful pets.  Meet Kimiko (albino) and Huxley (wild type) 
+      <p> Axolotls make wonderful pets.  Meet Kimiko (albino) and Huxley (wild type)
       <a href="axolotls.html"><b>here</b></a>.</p>
       <p> </p>
       <a><h2>University of Chicago Scavenger Hunt</h2></a>
-      <p>I am a proud alumnus ("Judge emeritus") of the organization that runs the 
-      <a href="http://scavhunt.uchicago.edu/">University of Chicago Scavenger Hunt</a>.  
-      The University of Chicago Scavenger Hunt ("Scav") is an annual event that lasts four 
-      days each May.  Each year's List of Items features several hundred weird and esoteric 
-      activities.  Examples of past items: A replica of the chess-playing "automaton" The 
-      Mechanical Turk; <a href="../images/Googlywoogly.jpeg">affixing enormous googly eyes 
-      to campus buildings</a>; a zeusaphone (singing tesla coil); a Stradivarius violin, 
-      cello, or viola.  In 2011, The University of Chicago Scavenger Hunt was anointed the 
+      <p>I am a proud alumnus ("Judge emeritus") of the organization that runs the
+      <a href="http://scavhunt.uchicago.edu/">University of Chicago Scavenger Hunt</a>.
+      The University of Chicago Scavenger Hunt ("Scav") is an annual event that lasts four
+      days each May.  Each year's List of Items features several hundred weird and esoteric
+      activities.  Examples of past items: A replica of the chess-playing "automaton" The
+      Mechanical Turk; <a href="../images/Googlywoogly.jpeg">affixing enormous googly eyes
+      to campus buildings</a>; a zeusaphone (singing tesla coil); a Stradivarius violin,
+      cello, or viola.  In 2011, The University of Chicago Scavenger Hunt was anointed the
       World's Largest Scavenger Hunt (proof <a href="../images/guinness.jpeg" target="_blank">
-      <b>here</b></a>) by the Guinness Book of World Records.  In actuality, our induction 
-      into the GBWR followed a single hour-long event that was a mere footnote in the 
-      four-day-long extravaganza of searching for and making things.  (The GBWR title has 
+      <b>here</b></a>) by the Guinness Book of World Records.  In actuality, our induction
+      into the GBWR followed a single hour-long event that was a mere footnote in the
+      four-day-long extravaganza of searching for and making things.  (The GBWR title has
       since been claimed by someone else.) </p>
     </div>
     <div id="column">
-      <div class="holder">             
+      <div class="holder">
         <div class="imgholder"><img src="../images/axolotls/kimiko.jpeg" alt="" />
         <p>Kimiko curled up in her food dish.</p>
         </div>
       </div>
-      <div class="holder">             
+      <div class="holder">
         <div class="imgholder"><img src="../images/theturk_small.jpeg" alt="" />
         <p>Me, playing Chess against The Mechanical Turk during the 2013 Scavenger Hunt.</p>
         </div>
@@ -111,15 +110,18 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
