--- a/pages/portfolio/development.html
+++ b/pages/portfolio/development.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 <script>
@@ -18,7 +18,7 @@ Licence URI: http://www.os-templates.com/template-terms
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
@@ -27,7 +27,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- Script for toggling (hide/show) text using jquery -->
 <!-- taken from http://www.w3schools.com/jquery/jquery_hide_show.asp -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script> 
+<script>
   $(document).ready(function(){
     $(".panel").hide();
     $(".flip").click(function(){
@@ -47,13 +47,14 @@ Licence URI: http://www.os-templates.com/template-terms
     <p>PhD Candidate, Cornell University Physics</p>
     <div id="topnav">
       <ul>
-        <li><a href="../../index.html">About Me</a></li>        
+        <li><a href="../../index.html">About Me</a></li>
         <li><a href="../research.html">Research</a>
           <ul>
+            <li><a href="../research.html#malaria">Malaria and Simulations for Health Policy</a></li>
             <li><a href="../research.html#dynamics">Dynamical Processes on Networks</a></li>
             <li><a href="../research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
-        </li>        
+        </li>
         <li><a class="active" href="../teaching.html">Teaching</a>
           <ul>
             <li><a href="../portfolio/index.html">Teaching Portfolio</a></li>
@@ -70,21 +71,21 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id ="content">
     <h1> <b> Professional Development </b> </h1>
     <h2> <a name="purpose"> Purpose of Portfolio </a> </h2>
-      <p> The purpose of this portfolio is to record aspects of the courses that I have 
-      taught as well as to reflect upon the effectiveness of my skill set as an instructor.  
-      By continually reflecting upon my teaching experiences, and by continually updating 
-      the portfolio, I hope to gain insight into what changes and adjustments I can make to 
+      <p> The purpose of this portfolio is to record aspects of the courses that I have
+      taught as well as to reflect upon the effectiveness of my skill set as an instructor.
+      By continually reflecting upon my teaching experiences, and by continually updating
+      the portfolio, I hope to gain insight into what changes and adjustments I can make to
       improve. </p>
-      <p> In addition to my own reflections, I also seek outside input in how to expand 
-      the scope of my teaching abilities.  In this section of my portfolio, you can find 
-      summaries of courses and seminars that I have attended to learn more about how to 
+      <p> In addition to my own reflections, I also seek outside input in how to expand
+      the scope of my teaching abilities.  In this section of my portfolio, you can find
+      summaries of courses and seminars that I have attended to learn more about how to
       be an effective teacher.</p>
     <hr>
     <h2> <a name="coursework"> Courses </a> </h2>
       <p><b>Teaching in Higher Education</b> Cornell University (ALS 6015)</p>
       <p>
-        In the Spring of 2016, I participated in a course on teaching effectively in 
-        higher education.  Here's a brief list of the major themes that I took away 
+        In the Spring of 2016, I participated in a course on teaching effectively in
+        higher education.  Here's a brief list of the major themes that I took away
         from the course.
       </p>
       <ul>
@@ -95,12 +96,12 @@ Licence URI: http://www.os-templates.com/template-terms
         <li> Reflecting upon Evidence of Learning </li>
         <li> Empathy and Openness in Science Courses </li>
       </ul>
-      <p><b>An Introduction to Evidence-Based Undergraduate STEM Teaching </b> 
+      <p><b>An Introduction to Evidence-Based Undergraduate STEM Teaching </b>
       eDX online course, Cornell University CIRTL</p>
-      <p> In the Fall of 2016, I took an online course that provided an overview of 
+      <p> In the Fall of 2016, I took an online course that provided an overview of
       the current trends and research on teaching undergraduates in STEM disciplines.  I
       supplemented the online course with an on-campus discussion group, where each week
-      I could reflect on teaching practices at Cornell with other graduate students and 
+      I could reflect on teaching practices at Cornell with other graduate students and
       postdocs.</p>
       <p> The course served to reiterate and reinforce many of the themes introduced in
       the course from the previous semester, with some additional emphasis on the importance
@@ -142,6 +143,8 @@ document.writeln("</left>");
     <div class="clear"></div>
   </div>
 </div>
+
+
 <!-- ### Put contact information here -->
 <div class="wrapper col5">
   <div id="footer">
@@ -149,19 +152,22 @@ document.writeln("</left>");
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
-      <div class="clear"></div> 
+      <div class="clear"></div>
     </div>
 
     <div class="clear"></div>
