--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 
@@ -28,7 +28,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- Script for toggling (hide/show) text using jquery -->
 <!-- taken from http://www.w3schools.com/jquery/jquery_hide_show.asp -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script> 
+<script>
 $(document).ready(function(){
 $(".flip").click(function(){
 $(".panel").toggle();
@@ -49,6 +49,7 @@ $(".panel").toggle();
         <li><a href="../../index.html">About Me</a></li>
         <li><a href="../research.html">Research</a>
           <ul>
+            <li><a href="research.html#malaria">Malaria and Simulations for Health Policy</a></li>
             <li><a href="../research.html#dynamics">Dynamical Processes on Networks</a></li>
             <li><a href="../research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
@@ -71,16 +72,16 @@ $(".panel").toggle();
     <h1><b>Teaching Portfolio</b></h1>
     <p>
       The documents included here serve to document, annotate, and reflect on my past
-      teaching experiences.  You can find sample syllabi and lesson plans that I have 
+      teaching experiences.  You can find sample syllabi and lesson plans that I have
       created for various courses.  I will also include my own annotations - my rationale
       for specific design choices for my courses, activities, and assessments - as well as
-      the lessons that I have learned from having implemented those choices.  The 
-      documents and corresponding annotations presented here will record how my approach 
+      the lessons that I have learned from having implemented those choices.  The
+      documents and corresponding annotations presented here will record how my approach
       to teaching has evolved over time.
     </p>
     <p>
-      Below you can find my teaching philosophy statement, in which I reflect upon my own 
-      experiences as an undergraduate physics student and describe how those experiences 
+      Below you can find my teaching philosophy statement, in which I reflect upon my own
+      experiences as an undergraduate physics student and describe how those experiences
       inform my own approach to teaching physics.
     </p>
     <p>
@@ -88,13 +89,13 @@ $(".panel").toggle();
     </p>
     <hr>
     <p>
-      My teaching portfolio has four different sections.  Each section contains documents 
-      from past or planned courses that represent how I approach different aspects of 
-      teaching, accompanied by annotations where I reflect on each of those documents 
+      My teaching portfolio has four different sections.  Each section contains documents
+      from past or planned courses that represent how I approach different aspects of
+      teaching, accompanied by annotations where I reflect on each of those documents
       and describe how it relates to my teaching philosophy.
     </p>
     <ul>
-      <li> <b> <a href="course_planning.html"> Course Development and Lesson Plans </a> </b> 
+      <li> <b> <a href="course_planning.html"> Course Development and Lesson Plans </a> </b>
         <p> - Contains sample syllabi and lesson plans </p>
       </li>
       <li> <b> <a href="assessment.html">Assessment of Student Learning</a> </b>
@@ -122,7 +123,7 @@ document.writeln("</left>");
  -->
  </script>
     </div>
-    
+
 <!-- ### Here's a column -->
     <div id="column">
       <div id="featured">
@@ -149,15 +150,18 @@ document.writeln("</left>");
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
