--- a/pages/portfolio/landing.html
+++ b/pages/portfolio/landing.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 <script>
@@ -18,7 +18,7 @@ Licence URI: http://www.os-templates.com/template-terms
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
@@ -26,7 +26,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- Script for toggling (hide/show) text using jquery -->
 <!-- taken from http://www.w3schools.com/jquery/jquery_hide_show.asp -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script> 
+<script>
 $(document).ready(function(){
 $(".flip").click(function(){
 $(".panel").toggle();
@@ -54,7 +54,7 @@ $(".panel").toggle();
 
 
 <!-- Password stuff
-Borrowed from http://www.htmlhelpcentral.com/messageboard/showthread.php?11344-Password-Prompt-Javascript 
+Borrowed from http://www.htmlhelpcentral.com/messageboard/showthread.php?11344-Password-Prompt-Javascript
 Note: not actually secure!  Need to create security at the domain host level-->
 <script language="Javascript">
 <!--
@@ -89,15 +89,18 @@ location = "../../index.html "
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
