--- a/pages/teaching.html
+++ b/pages/teaching.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 <script>
@@ -18,7 +18,7 @@ Licence URI: http://www.os-templates.com/template-terms
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
@@ -36,6 +36,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="../index.html">About Me</a></li>
         <li><a href="research.html">Research</a>
           <ul>
+            <li><a href="research.html#malaria">Malaria and Simulations for Health Policy</a></li>
             <li><a href="research.html#dynamics">Dynamical Processes on Networks</a></li>
             <li><a href="research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
@@ -62,7 +63,7 @@ Licence URI: http://www.os-templates.com/template-terms
       well as annotations on previous course design choices that show how my skills
       as an instructor have developed over time.</p>
       <p> Find my teaching portfolio <a href="portfolio/index.html"><b>here &raquo;</b></a></p>
-    </div>    
+    </div>
 <!-- ### Here's a column -->
     <div id="column">
       <div class = "holder">
@@ -70,7 +71,7 @@ Licence URI: http://www.os-templates.com/template-terms
         </div>
       </div>
       <div id="featured">
-        <p> Helping fifth graders and kindergarteners make liquid nitrogen ice cream, as 
+        <p> Helping fifth graders and kindergarteners make liquid nitrogen ice cream, as
         part of Cornell Center for Materials Research outreach.</p>
       </div>
     </div>
@@ -78,10 +79,10 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="content">
       <hr>
       <h1 id="greprep"> <a href="greprep.html"> Physics GRE Subject Test Prep </a> </h1>
-      <p>For the past three years, I have organized and taught a short preparatory 
-      course on the Physics GRE Subject Test.  The course is intended for third- or 
-      fourth-year undergraduates who are interested in applying for graduate school in 
-      physics, and includes a review of topics from undergraduate physics as well 
+      <p>For the past three years, I have organized and taught a short preparatory
+      course on the Physics GRE Subject Test.  The course is intended for third- or
+      fourth-year undergraduates who are interested in applying for graduate school in
+      physics, and includes a review of topics from undergraduate physics as well
       as time-saving strategies for approaching problems on the test. </p>
       <p>Click <a href="greprep.html"> here </a> to find all of the materials one needs to
       prepare for the Physics GRE Subject Test. </p>
@@ -90,8 +91,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="content">
       <hr>
       <h1>Teaching Assistantships</h1>
-      <p> I have worked as a teaching assistant for a number of physics courses at 
-      Cornell University: 
+      <p> I have worked as a teaching assistant for a number of physics courses at
+      Cornell University:
       <ul>
         <li>TA, Physics II: Electricity and Magnetism (for majors), Spring 2016</li>
         <li>TA, Physics I: Mechanics and Special Relativity (for majors), Fall 2015</li>
@@ -99,7 +100,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li>TA, Physics I: Mechanics and Heat, Fall 2011</li>
       </ul>
       </p>
-    </div>    
+    </div>
 
     <div class="clear"></div>
   </div>
@@ -112,15 +113,18 @@ Licence URI: http://www.os-templates.com/template-terms
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
