--- a/pages/portfolio/assessment.html
+++ b/pages/portfolio/assessment.html
@@ -10,7 +10,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Daniel T. Citron | Cornell University Physics </title>
+<title>Daniel T. Citron | University of Washington, IHME </title>
 
 <!--google analytics script -->
 <script>
@@ -18,7 +18,7 @@ Licence URI: http://www.os-templates.com/template-terms
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
   ga('create', 'UA-58110355-1', 'auto');
   ga('send', 'pageview');
 </script>
@@ -27,7 +27,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- Script for toggling (hide/show) text using jquery -->
 <!-- taken from http://www.w3schools.com/jquery/jquery_hide_show.asp -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script> 
+<script>
   $(document).ready(function(){
     $(".panel").hide();
     $(".flip").click(function(){
@@ -49,10 +49,11 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="../../index.html">About Me</a></li>
         <li><a href="../research.html">Research</a>
           <ul>
+            <li><a href="../research.html#malaria">Malaria and Simulations for Health Policy</a></li>a
             <li><a href="../research.html#dynamics">Dynamical Processes on Networks</a></li>
             <li><a href="../research.html#structure">Structural Analysis of Networks</a></li>
           </ul>
-        </li>    
+        </li>
         <li><a class="active" href="../teaching.html">Teaching</a>
           <ul>
             <li><a href="../portfolio/index.html">Teaching Portfolio</a></li>
@@ -68,54 +69,54 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id ="content">
     <h1> <b> Assessment of Student Learning </b> </h1>
       <p> Different courses have different objectives, so assessments of student work
-      should be tailored to best incentivize them to achieve those objectives.  For 
-      example, I have found that without a rewards system that encourages students to 
-      explain their reasoning, students' physics homework sets may include no reasoning 
-      regardless of whether their answers are mathematically "correct."  To correct this, 
-      I've come to embrace the idea of using written problem sets to reward 
+      should be tailored to best incentivize them to achieve those objectives.  For
+      example, I have found that without a rewards system that encourages students to
+      explain their reasoning, students' physics homework sets may include no reasoning
+      regardless of whether their answers are mathematically "correct."  To correct this,
+      I've come to embrace the idea of using written problem sets to reward
       students for explaining their work, rather than just manipulating equations. </p>
-      <p> I've included such an assignment in my example <a href="course_planning.html#syllabus"> 
-      syllabus</a>.  You can find an example of how I would structure the grading scheme 
+      <p> I've included such an assignment in my example <a href="course_planning.html#syllabus">
+      syllabus</a>.  You can find an example of how I would structure the grading scheme
       for a write-up homework assignment <a href="#rubric"> below </a>.  </p>
     <hr>
     <h2> <a name="assessment"> Assessment as Feedback </a> </h2>
-      <p>I have found that many of my students are very worried about their grades 
-      on their homework sets and quizzes.  These students are ambitious and consider 
-      themselves to be intelligent and hard-working, so it can be unnerving for them to 
-      receive low scores on assignments. I remember feeling the same way as an 
+      <p>I have found that many of my students are very worried about their grades
+      on their homework sets and quizzes.  These students are ambitious and consider
+      themselves to be intelligent and hard-working, so it can be unnerving for them to
+      receive low scores on assignments. I remember feeling the same way as an
       undergraduate, so I sympathize. </p>
-      <p> To alleviate the anxiety associated with small assignments, I believe that 
-      instructors should make it clear that some assignments are intended as feedback for 
-      the students themselves.  Rather than seeing a low quiz score as an indication of 
-      being a bad student, I want my students to see my grading as an indication of what 
+      <p> To alleviate the anxiety associated with small assignments, I believe that
+      instructors should make it clear that some assignments are intended as feedback for
+      the students themselves.  Rather than seeing a low quiz score as an indication of
+      being a bad student, I want my students to see my grading as an indication of what
       areas they can improve upon, or what they need to review for the future. </p>
-      <p> In my class for the past two semesters, I have implemented this informally 
-      without making this distinction explicit.  I use discussion section as an opportunity 
-      for students to try and figure things out on their own without any fear of making 
-      mistakes.  Discussion section is a low-stress environment where students can fail 
-      without consequences as well as learn from their mistakes.  Of course, this is 
-      different from telling students explicitly that assignments can be thought of as 
-      feedback rather than judgment, but I will be adopting this new policy for future 
+      <p> In my class for the past two semesters, I have implemented this informally
+      without making this distinction explicit.  I use discussion section as an opportunity
+      for students to try and figure things out on their own without any fear of making
+      mistakes.  Discussion section is a low-stress environment where students can fail
+      without consequences as well as learn from their mistakes.  Of course, this is
+      different from telling students explicitly that assignments can be thought of as
+      feedback rather than judgment, but I will be adopting this new policy for future
       courses.  </p>
     <hr>
 <!--    <h2> Evidence of Learning </h2>
     <hr> -->
     <h2> <a name="rubric"> Sample Rubric </a> </h2>
       <p> Referring back to the sample syllabus that appears under <a href="course_planning.html#syllabus">
-      Course Development and Lesson Plans</a>, I mentioned that I would like my future 
-      students to develop the ability to make clear arguments based on the physics 
-      concepts that we have covered. Homework sets, rather than featuring plug-and-chug 
+      Course Development and Lesson Plans</a>, I mentioned that I would like my future
+      students to develop the ability to make clear arguments based on the physics
+      concepts that we have covered. Homework sets, rather than featuring plug-and-chug
       problems, would consist of one or two long-form write-up problems. </p>
-      <p> Below I have included a grading rubric that communicates to 
-      students what elements need to be present in their homework sets.  In addition to 
-      rewarding students for arriving at the correct answer, the grading rubric emphasizes 
-      organization, clarity, and completeness of the argument.  By making it clear to 
-      students what a good homework set is expected to look like, I hope to train them in 
+      <p> Below I have included a grading rubric that communicates to
+      students what elements need to be present in their homework sets.  In addition to
+      rewarding students for arriving at the correct answer, the grading rubric emphasizes
+      organization, clarity, and completeness of the argument.  By making it clear to
+      students what a good homework set is expected to look like, I hope to train them in
       good communication habits that will help them in future science courses. </p>
       <p><b> <a href="rubric.pdf" target="_blank">Example Grading Rubric: Homework Write-ups
         </a></b></p>
     <hr>
-    
+
 <!-- javascript for automatically-updating date of modification -->
 <!-- taken from https://forums.techguy.org/threads/how-can-i-get-an-automatic-last-updated-in-my-web-page.693929/ -->
 <script type="text/javascript">
@@ -137,12 +138,11 @@ document.writeln("</left>");
             <li><u>Assessment of Student Learning</u></li>
               <p>
                 <ul>
-                  <li> &#9642 <a href="#assessment"> Assessment as Feedback</a> </li>
-<!--                  <li> Evidence of Learning </li> -->
+                  <li> &#9642 <a href="#assessment">Assessment as Feedback</a> </li>
+<!-- <li> Evidence of Learning </li> -->
                   <li> &#9642 <a href="#rubric"> Sample Rubric </a></li>
                 </ul>
-              </p> 
-            </li>
+              </p>
             <li> <a href="effectiveness.html"><u>Classroom Effectiveness</u></a>           </li>
             <li> <a href="development.html"><u>Professional Development</u></a> </li>
           </ul>
@@ -152,6 +152,7 @@ document.writeln("</left>");
     <div class="clear"></div>
   </div>
 </div>
+
 <!-- ### Put contact information here -->
 <div class="wrapper col5">
   <div id="footer">
@@ -159,19 +160,22 @@ document.writeln("</left>");
       <div id="contactdetails">
         <h2>Contact Details</h2>
         <ul>
-          <li>Cornell University Department of Physics</li>
-          <li>Clark Hall</li>
-          <li>Ithaca, NY 14853</li>
-          <li><b>Email Me: 
-            <script language="JavaScript">
-            var username = "dtc65";
-            var hostname = "cornell.edu";
-            var linktext = username + "@" + hostname ;
-            document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>"); </script></b>
+          <li>Institute for Health Metrics and Evaluation</li>
+          <li>University of Washington</li>
+          <li>Seattle, WA</li>
+          <li>
+            <b>Email Me:
+            <script type="text/javascript">
+              var username = "dtcitron";
+              var hostname = "uw.edu";
+              var linktext = username + "@" + hostname ;
+              document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+            </script>
+            </b>
           </li>
         </ul>
       </div>
-      <div class="clear"></div> 
+      <div class="clear"></div>
     </div>
 
     <div class="clear"></div>
