--- a/pages/greprep.html
+++ b/pages/greprep.html
@@ -29,8 +29,8 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 <div class="wrapper col1">
   <div id="head">
-    <h1><a href="../index.html">Daniel T. Citron</a></h1>
-    <p>PhD Candidate, Cornell University Physics</p>
+    <h1><a href="index.html">Daniel T. Citron</a></h1>
+    <p>Postdoctoral Fellow, University of Washington, IHME</p>
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
