--- a/pages/other.html
+++ b/pages/other.html
@@ -21,15 +21,14 @@ Licence URI: http://www.os-templates.com/template-terms
   ga('send', 'pageview');
 </script>
 
-
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css" />
 </head>
 <body id="top">
 <div class="wrapper col1">
   <div id="head">
-    <h1><a href="../index.html">Daniel T. Citron</a></h1>
-    <p>PhD Candidate, Cornell University Physics</p>
+    <h1><a href="index.html">Daniel T. Citron</a></h1>
+    <p>Postdoctoral Fellow, University of Washington, IHME</p>
     <div id="topnav">
       <ul>
         <li><a href="../index.html">About Me</a></li>
