--- a/pages/portfolio/landing.html
+++ b/pages/portfolio/landing.html
@@ -40,8 +40,8 @@ $(".panel").toggle();
 <body id="top">
 <div class="wrapper col1">
   <div id="head">
-    <h1><a href="../index.html">Daniel T. Citron</a></h1>
-    <p>PhD Candidate, Cornell University Physics</p>
+    <h1><a href="index.html">Daniel T. Citron</a></h1>
+    <p>Postdoctoral Fellow, University of Washington, IHME</p>
     <div id="topnav">
       <ul>
         <li><a href="../../index.html">About Me</a></li>
